# galileo-poc

./: .gitignore  README.md  agent.py  app.py  config.py  eval_output.txt  eval_viewer.py  pyproject.toml  questions.txt  requirements.txt  ui_components.py
agents/: README.md  __init__.py  factory.py
cursor/rules/: create_test_data.mdc  general_instructions.mdc
data/: aktuality.csv  tyn_1.json  tyn_2.json  tyn_3.json  udalosti.csv  uredni_deska.csv
data/data-v2/: CONVERSION_SCRIPTS.md  README.md  convert_editors_tyn_to_csv.py  convert_messages_tyn_to_csv.py  convert_official_boards_tyn_to_csv.py
data/eval-streamlit/: eval_grades_fresh_20250524_121500.json  eval_grades_with_ground_truth_20250524_080149.json
docs/: IMPROVEMENTS.md
eval/: README.md  eval_agent.py  eval_grading.py  eval_questions.json
eval/prompts/: llm_judge_prompt.txt
prompts/: README.md  system_prompt.txt
utils/: __init__.py  exceptions.py  logging.py
