[project]
name = "galileo-poc"
version = "0.1.0"
description = "no"
authors = [
    {name = "Matouš Eibich"}
]
license = {text = "idk"}
readme = "README.md"
requires-python = ">=3.12.4,<4.0"
dependencies = [
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-openai (>=0.0.5)",
    "langchain-core (>=0.1.4)",
    "openai (>=1.77.0,<2.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "python-dotenv >= 1.0.1",
    "jsonpath-ng >= 1.7.0",
    "streamlit >= 1.28.0",
    "langchain-experimental >= 0.0.49",
    "tabulate >= 0.9.0",
    "pandas >= 2.0.0"
]

# Optional dependency groups
[project.optional-dependencies]
eval = [
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-openai (>=0.0.5)",
    "langchain-core (>=0.1.4)",
    "langchain-experimental >= 0.0.49",
    "openai (>=1.77.0,<2.0.0)",
    "python-dotenv >= 1.0.1",
    "pandas >= 2.0.0",
    "tabulate >= 0.9.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
